# multimedia-data-processing

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
BMP/: bitreader.h  main.cpp  matrix.h  read_headers.h
BMP-1/: main.cpp  rana01.pam
BMP-4/: main.cpp  rana04.pam
BMP-8/: main.cpp  rana08.pam  rana_gray.pam
BMP/BMP-1/: main.cpp
BMP/BMP-24/: main.cpp
BMP/BMP-4/: main.cpp
BMP/BMP-8/: main.cpp
FIT/: main.cpp
LZ4/: lz4decomp.cpp
LZ78/: lz78encode.cpp  main.cpp
Lempel-Ziv-Stac/: bibbia.txt.lzs  lzs.cpp  lzs.h  main.cpp  my_prova.txt  my_test.txt  output.lzs  test.txt.lzs  utf8_compressed.textlzw
PAM/: combine.cpp  frog_rgb_B.pam  frog_rgb_G.pam  frog_rgb_R.pam  frog_rgb_reconstructed.pam  mat.h  parse_header.h  split.cpp
YUV4MPEG2/: y4m_color.cpp  y4m_gray.cpp
Z85rot/: mio_rana.ppm  z85rot.cpp
bayer_decode/: bayer_decode.cpp  small.pgm  small_original.ppm
bittorrent/: torrent.cpp
elias/: elias.cpp  n02.txt  numbers01.txt  numbers02.txt  out01  out02
frequencies/: file01.txt  frequencies.cpp  out
include/bitrw/: bitreader.h  bitwriter.h
include/matrix/: matrix.h
packbits/: compressme2.txt  compressme4.txt  decompressed1.txt  decompressed3.txt  output2.packbits  output3.packbits  output4.packbits  packbits.cpp
pam/: frog.flipped.pam  pam.cpp
qoi/: PAM format specification.html  qoi_decomp.cpp
read_int11/: read_int11.cpp
read_int32/: file01.txt  read_int32.cpp
snappy/: main.cpp
sort_int/: file01.txt  sort_int.c  sort_int.cpp
write_int11/: file01.txt  write_int11.cpp
write_int32/: file01.txt  write_int32.cpp
