cmake_minimum_required(VERSION 3.24)
project(multimedia_data_processing)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

include_directories(include)

add_executable(sort_int sort_int/sort_int.cpp)
add_executable(sort_int_c sort_int/sort_int.c)
add_executable(frequencies frequencies/frequencies.cpp)
add_executable(write_int32 write_int32/write_int32.cpp)
add_executable(read_int32 read_int32/read_int32.cpp)
add_executable(write_int11 write_int11/write_int11.cpp)
add_executable(read_int11 read_int11/read_int11.cpp)
add_executable(elias elias/elias.cpp include/bitrw/bitwriter.h include/bitrw/bitreader.h)
add_executable(packbits packbits/packbits.cpp
        include/bitrw/bitwriter.h
        include/bitrw/bitreader.h)
add_executable(pam pam/pam.cpp pam/matrix.h)
add_executable(y4m_gray YUV4MPEG2/y4m_gray.cpp)
add_executable(y4m_color YUV4MPEG2/y4m_color.cpp)
add_executable(torrent_dump bittorrent/torrent.cpp)
add_executable(pam_split PAM/split.cpp PAM/mat.h)
add_executable(pam_combine PAM/combine.cpp PAM/mat.h)
add_executable(esame-17 bayer_decode/bayer_decode.cpp include/matrix/mat.h)
add_executable(esame-16 LZ4/lz4decomp.cpp)
add_executable(FIT FIT/main.cpp)
add_executable(alpha_compositing alpha_compositing/compose.cpp)
add_executable(MDCT MDCT/main.cpp)
add_executable(profMDCT MDCT/prof.cpp)
add_executable(snappy snappy/main.cpp)
add_executable(LZ78 LZ78/main.cpp)
add_executable(base64 base64/main.cpp include/bitrw/bitreader.h)
add_executable(Z85rot Z85rot/z85rot.cpp)
add_executable(QOI qoi/qoi_decomp.cpp)
add_executable(LZS Lempel-Ziv-Stac/main.cpp Lempel-Ziv-Stac/lzs.cpp Lempel-Ziv-Stac/lzs.h)